--- a/css/styles.css
+++ b/css/styles.css
@@ -112,11 +112,12 @@ img {
     padding-bottom: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
+    color: var(--OCEAN, #404BBF);
 }
 
-.menu-li-link:hover, 
+.menu-li-link:hover,
 .menu-li-link:focus {
-    color: var(--OCEAN, #404BBF);;
+    color: var(--OCEAN, #404BBF);
 }
 
 .menu-li-link::after {
@@ -382,6 +383,7 @@ img {
     justify-content: center;
     border-radius: 50%;
     background-color: var(--IRIS, #4D5AE5);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon_social:hover,
