--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,21 @@ img {
 
 /* header */
 
+.header-container {
+    width: auto;
+    margin: 0 auto;
+    padding: 0 156px;
+}
+
 .navigation {
     display: flex;
     align-items: center;
 }
 
 .header-web-studio {
+    position: sticky;
+    z-index: 10;
+    top: 0;
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -100,19 +109,18 @@ img {
 }
 
 .menu-li-link {
-    color: var(--NAVY-BLUE, #2E2F42);
-    /* Menu Text */
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
-    text-decoration: none;
     /*flex*/
+    position: relative;
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
-    color: var(--OCEAN, #404BBF);
+    /* Menu Text */
+    color: var(--NAVY-BLUE, #2E2F42);
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    text-decoration: none;
 }
 
 .menu-li-link:hover,
@@ -122,19 +130,18 @@ img {
 
 .menu-li-link::after {
     content: '';
+    position: absolute;
+    bottom: -1px;
     display: block;
     width: 100%;
     height: 4px;
     border-radius: 2px;
     background: transparent;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
 }
 
 .menu-li-link.current::after {
     background: var(--OCEAN, #404BBF);
-}
+} 
 
 /* address */
 .contacts {
@@ -172,8 +179,10 @@ img {
     max-width: 1440px;
     padding-top: 188px;
     padding-bottom: 188px;
+    margin-left: auto;
+    margin-right: auto;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:center;
     background-size: cover;
 }
 
@@ -192,6 +201,10 @@ img {
     margin-bottom: 48px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.section-div-solutions {
+    position: relative;
 }
 
 /* button */
