--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,11 @@ img {
     color: var(--OCEAN, #404BBF);
 }
 
-.menu-li-link::after {
+.current {
+    color: var(--OCEAN, #404BBF);
+}
+
+.current::after {
     content: '';
     position: absolute;
     bottom: -1px;
@@ -136,12 +140,8 @@ img {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background: transparent;
-}
-
-.menu-li-link.current::after {
     background: var(--OCEAN, #404BBF);
-} 
+}
 
 /* address */
 .contacts {
